projects/maison/src/apps/affine/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    clusterexternalsecret.eso.io/name: cnpg-s3-credentials
  name: affine
